<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arif_ginanjar.lesson5crudsqllite.CreateBiodataActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/activity_create_biodata_numbertextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/number"/>

    <EditText
        android:id="@+id/activity_create_biodata_numberedittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:layout_alignStart="@id/activity_create_biodata_numbertextview"
        android:layout_below="@id/activity_create_biodata_numbertextview"
        tools:ignore="LabelFor">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/activity_create_biodata_namatextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_numberedittext"
        android:layout_below="@id/activity_create_biodata_numberedittext"
        android:layout_marginTop="10dp"
        android:text="@string/nama"/>

    <EditText
        android:id="@+id/activity_create_biodata_namaeditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_namatextview"
        android:layout_below="@id/activity_create_biodata_namatextview"
        android:inputType="text"
        android:maxLength="40"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/activity_create_biodata_birthdaytextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_namaeditext"
        android:layout_below="@id/activity_create_biodata_namaeditext"
        android:layout_marginTop="10dp"
        android:text="@string/tanggal_lahir"/>

    <EditText
        android:id="@+id/activity_create_biodata_birthdayeditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_birthdaytextview"
        android:layout_below="@id/activity_create_biodata_birthdaytextview"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/activity_create_biodata_jktextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_birthdayeditext"
        android:layout_below="@id/activity_create_biodata_birthdayeditext"
        android:layout_marginTop="10dp"
        android:text="@string/jenis_kelamin"/>

    <EditText
        android:id="@+id/activity_create_biodata_jkeditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_jktextview"
        android:layout_below="@id/activity_create_biodata_jktextview"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:maxLength="1"
        android:hint="@string/l_atau_p"/>

    <TextView
        android:id="@+id/activity_create_biodata_addresstextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_jkeditext"
        android:layout_below="@id/activity_create_biodata_jkeditext"
        android:layout_marginTop="10dp"
        android:text="@string/alamat"/>

    <EditText
        android:id="@+id/activity_create_biodata_addresseditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_addresstextview"
        android:layout_below="@id/activity_create_biodata_addresstextview"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:maxLength="100" />

    <Button
        android:id="@+id/activity_create_biodata_simpanbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_create_biodata_addresseditext"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle"
        android:drawableStart="@drawable/ic_action_done"
        android:text="@string/simpan"/>

    <Button
        android:id="@+id/activity_create_biodata_backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:drawableStart="@drawable/ic_action_back"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@id/activity_create_biodata_addresseditext"
        android:layout_alignRight="@id/activity_create_biodata_addresseditext"
        tools:ignore="RtlHardcoded"
        android:text="@string/kembali"/>

</RelativeLayout>
