<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arif_ginanjar.lesson5crudsqllite.ReadBiodataActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/activity_read_biodata_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="104dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview"/>

    <TextView
        android:id="@+id/activity_read_biodata_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_read_biodata_tv1"
        android:layout_below="@id/activity_read_biodata_tv1"
        android:layout_marginTop="20dp"
        android:text="@string/textview"/>

    <TextView
        android:id="@+id/activity_read_biodata_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_read_biodata_tv2"
        android:layout_below="@id/activity_read_biodata_tv2"
        android:layout_marginTop="20dp"
        android:text="@string/textview"/>

    <TextView
        android:id="@+id/activity_read_biodata_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_read_biodata_tv3"
        android:layout_below="@id/activity_read_biodata_tv3"
        android:layout_marginTop="20dp"
        android:text="@string/textview"/>

    <TextView
        android:id="@+id/activity_read_biodata_tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_read_biodata_tv4"
        android:layout_below="@id/activity_read_biodata_tv4"
        android:layout_marginTop="20dp"
        android:text="@string/textview"/>

    <TextView
        android:id="@+id/activity_read_biodata_nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_read_biodata_tv2"
        android:layout_alignParentStart="true"
        android:text="@string/number"/>

    <TextView
        android:id="@+id/activity_read_biodata_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_read_biodata_tv2"
        android:layout_alignBottom="@id/activity_read_biodata_tv2"
        android:layout_alignStart="@id/activity_read_biodata_nomor"
        android:text="@string/nama"/>

    <TextView
        android:id="@+id/activity_read_biodata_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_read_biodata_tv3"
        android:layout_alignBottom="@id/activity_read_biodata_tv3"
        android:layout_alignStart="@id/activity_read_biodata_nama"
        android:text="@string/tanggal_lahir"/>

    <TextView
        android:id="@+id/activity_read_biodata_jk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_read_biodata_tv4"
        android:layout_alignBottom="@id/activity_read_biodata_tv4"
        android:layout_alignStart="@id/activity_read_biodata_birthday"
        android:text="@string/jenis_kelamin"/>

    <TextView
        android:id="@+id/activity_read_biodata_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/activity_read_biodata_tv5"
        android:layout_alignBottom="@id/activity_read_biodata_tv5"
        android:layout_alignStart="@id/activity_read_biodata_jk"
        android:text="@string/alamat"/>

    <Button
        android:id="@+id/activity_read_biodata_buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_read_biodata_address"
        android:layout_below="@id/activity_read_biodata_address"
        android:layout_marginTop="34dp"
        style="?android:attr/borderlessButtonStyle"
        android:drawableStart="@drawable/ic_action_back"
        android:text="@string/kembali"/>

</RelativeLayout>